feat: fully working prototype v1